PB ve RF tamamını kullan fonksiyonuna adapte edildi.

--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -2125,7 +2125,11 @@
             $("#RFTable").hide();
             $("#RFPivot").hide();
             $("#RFPivotTop").hide();
-            $("#tamamidiv").hide();
+            $("#tamami").prop("checked", false);
+            if (localStorage.PBPivotVeri != null && localStorage.PBPivotVeri != undefined && localStorage.PBPivotVeri != "null") {
+
+                $("#tamamidiv").show();
+            }
             PBTableLoadLocalData();
         }
         else if (val.value == "RF") {
@@ -2152,7 +2156,11 @@
             $("#RFTable").show();
             $("#RFPivot").show();
             $("#RFPivotTop").show();
-            $("#tamamidiv").hide();
+            $("#tamami").prop("checked", false);
+            if (localStorage.RFPivotVeri != null && localStorage.RFPivotVeri != undefined && localStorage.RFPivotVeri != "null") {
+
+                $("#tamamidiv").show();
+            }
             RFTableLoadLocalData();
         }
         else
