İş emri dl atarken seritra miktar2 1 olarak güncellendi.

--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -1703,7 +1703,7 @@
         var siparisno, Sipkont = "";
 
         var musteri = tr[i].getElementsByTagName("select")[tr[i].getElementsByTagName("select").length - 1].value;
-        if (Musteri != "EFECE GALVANİZ") {
+        if (musteri != "EFECE GALVANİZ") {
             var f = Cariler.filter(x => x.CARI_ISIM == musteri)[0];
             siparisno = f.FISNO;
             Sipkont = f.SIPKONT;
@@ -1962,7 +1962,8 @@
 
     config.renderers = $.extend($.pivotUtilities.renderers, $.pivotUtilities.gtRenderers);
     getPivot();
-    getPivot2();
+                    getPivot2();
+                    $("#tamami").hide();
     $("#seri").val(null).trigger("input");
 })
                 break;
@@ -2197,7 +2198,7 @@
     }
 
     function netsisaktar() {
-        var TamamiAktarilsin = $("#tamami").is(":checked");
+       
         $("#content").show();
         document.body.style.cursor = 'wait';
         var Tip = $('input[name="uretim-tip"]:checked').val();
@@ -2208,7 +2209,7 @@
                 $.ajax({
     url: '@Url.Action("Post","IsEmri")',
     type: 'POST',
-                    data: { isemri: lis, TamamiKullanılsin: TamamiAktarilsin },
+                    data: { isemri: lis},
     success: function () {
 
         $("#content").hide();
