--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -23,10 +23,8 @@
             white-space: unset !important;
         }
 
-        video {
-            margin-left: 27%;
-            width: 50% !important;
-            margin-top: 2%;
+        #qr-reader1__dashboard_section{
+            padding:0 !important
         }
 
         #html5-qrcode-button-camera-stop {
@@ -259,7 +257,7 @@
             }
         }
 
-        @@media screen and (min-height:801px) and (max-height:1149px) {
+        @@media screen and (min-height:801px) and (max-height:1180px) {
             #stokadlari {
                 height: 630px;
             }
@@ -268,6 +266,11 @@
         @@media screen and (min-height:1150px) {
             #stokadlari {
                 height: 945px;
+            }
+        }
+        @@media screen and (min-width:801px) and (max-width:1199px) {
+            #qr-reader1 {
+                margin-top: 35% !important
             }
         }
     </style>
@@ -311,7 +314,7 @@
                 </div>
             </div>
             <div class="col d-flex" id="barkodbuttoncol">
-                <button type="button" id="BarkodButton" onclick="BarkodModal()" class="btn btn-primary showmodal" style="width:8%;" data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<span>Barkod</span>"><i class="bi bi-qr-code-scan"></i></button>
+                <button type="button" id="BarkodButton" onclick="BarkodModal()" class="btn btn-primary showmodal" style="width:12%;" data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" data-bs-original-title="<span>Barkod</span>"><i class="bi bi-qr-code-scan"></i></button>
             </div>
         </div>
 
@@ -500,8 +503,8 @@
                         </audio>
                         <button style="display:none" onclick="playAudio()" type="button">Play Audio</button>
 
-                        <div class="container-fluid p-0">
-                            <div id="qr-reader1" style="width:45%;margin-right:auto;margin-left:auto;margin-top:7%;margin-bottom:auto"></div>
+                        <div class="justify-content-center" style="display:flex">
+                            <div id="qr-reader1" style="width:900px;margin-top:5%"></div>
                             <div id="qr-reader-results1"></div>
                         </div>
                     </div>
@@ -1409,7 +1412,7 @@
     }
 
     html5QrcodeScanner = new Html5QrcodeScanner(
-        "qr-reader1", { fps: 10, qrbox: 800 });
+        "qr-reader1", { fps: 10, qrbox: { width: 900, height: 400 } });
     html5QrcodeScanner.render(onScanSuccess);
 });
             }
@@ -1593,12 +1596,14 @@
                 if (bant) {
                     Toast.fire({
                         icon: 'info',
-                        title: 'Bant miktarından dolayı değer ' + max + ' olarak güncellendi'
+                        title: '<div style="display:flex" class="justify-content-center">Dikkat!</div>',
+                        text: 'Makineye takılan girdi miktarı kalanı ' + max + ' olduğundan ' + max + ' olarak güncellenmiştir.'
                     });
                 } else {
                     Toast.fire({
                         icon: 'info',
-                        title: 'Paket miktarından dolayı değer ' + max + ' olarak güncellendi'
+                        title: '<div style="display:flex" class="justify-content-center">Dikkat!</div>',
+                        text: 'İş emrindeki üretilebilir miktar ' + max + ' olduğundan ' + max + ' olarak güncellenmiştir.'
                     });
                 }
                 
